add comments for Ram to be better

--- a/Zbang.Cloudents.Mvc2Jared/Views/Terms/index.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Terms/index.cshtml
@@ -129,6 +129,7 @@
                     }
                 }
             }).done(function () {
+                //prop images has been added to the url query
                 $.ajax({
                     type: "GET",
                     url: "http://en.wikipedia.org/w/api.php?action=query&format=json&prop=images%7Cextracts%7Cpageimages%7Cpageprops%7Cpageterms&meta=&exchars=350&pilicense=any&piprop=original&titles=" + accurateTerm,
