--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -34,9 +34,9 @@
                 <span>Was reviewd</span>
             </label>
             <label class="col">
-                <input type="checkbox" ng-checked="st.formData.isSearchType" ng-model="st.formData.isSearchType"
-                       name="isSearchType">
-                <span>No document type</span>
+                <input type="checkbox" ng-checked="st.formData.isTag" ng-model="st.formData.isTag"
+                       name="isTags">
+                <span>No tags</span>
             </label>
         </div>
     </form>
@@ -48,26 +48,28 @@
         <div class="status" ng-if="st.changesSaved">{{st.statusText}}</div>
     </div>
     <div class="results-header row" ng-if="st.doc !== null && !st.noResults">
-        <div class="col-5">
+        <div class="col-3">
             <button class="save" name="img_btn" ng-click="st.Save()">Save</button>
         </div>
+        <button type="button" class="delete-doc col-2" ng-click="st.deleteDoc()">Delete document</button>
         <div ng-if="st.resNum !== 0" class="results-nav col-7">
             <button ng-disabled="st.counter==0" ng-click="st.prevPage()" name="back_btn"></button>
             <span name="results_num" class="counter">
                 Results number: {{st.counter + 1}}/{{st.resNum}}
             </span>
-            <button ng-disabled="st.counter==st.resNum-1"
-                    ng-click="st.nextPage()" name="next_btn"
+            <button 
+                    ng-click="(st.counter==st.resNum-1)?st.moreResult():st.nextPage()" name="next_btn"
                     type="submit" class="md-raised md-primary md-button md-ink-ripple"></button>
-            <button ng-disabled="st.counter<st.resNum-1"
+            @*<button ng-disabled="st.counter<st.resNum-1"
                     ng-click="st.moreResult()" name="more_result" value="More"
-                    type="button" class="btn btn-info">More Result</button>
+                    type="button" class="btn btn-info">More Result</button>*@
         </div>
     </div>
     <div class="result-data row" ng-if="st.doc !== null && !st.noResults">
         <div class="info col-5">
             <section class="general-info">
                 <h1>Document info</h1>
+                <label class="detail">Doc ID: {{st.doc.ItemId}}</label>
                 <label class="detail">
                     Name:
                     <input id="myItemName" class="form-check-label" type="text" ng-model="st.doc.ItemName" value={{st.doc.ItemName}}>
@@ -75,7 +77,7 @@
                 <div class="detail">Box name: {{st.doc.BoxName}}</div>
                 <div class="detail">Department: {{st.doc.Department}}</div>
                 <div class="detail">University: {{st.doc.University}}</div>
-                <button type="button" class="delete-doc" ng-click="st.deleteDoc()">Delete document</button>
+              
             </section>
             <section class="doc-type">
                 <h1>Document Type</h1>
