--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -57,12 +57,11 @@
             <span name="results_num" class="counter">
                 Results number: {{st.counter + 1}}/{{st.resNum}}
             </span>
-            <button 
-                    ng-click="(st.counter==st.resNum-1)?st.moreResult():st.nextPage()" name="next_btn"
+            <button ng-click="(st.counter==st.resNum-1)?st.moreResult():st.nextPage()" name="next_btn"
                     type="submit" class="md-raised md-primary md-button md-ink-ripple"></button>
             @*<button ng-disabled="st.counter<st.resNum-1"
-                    ng-click="st.moreResult()" name="more_result" value="More"
-                    type="button" class="btn btn-info">More Result</button>*@
+                ng-click="st.moreResult()" name="more_result" value="More"
+                type="button" class="btn btn-info">More Result</button>*@
         </div>
     </div>
     <div class="result-data row" ng-if="st.doc !== null && !st.noResults">
@@ -77,15 +76,15 @@
                 <div class="detail">Box name: {{st.doc.BoxName}}</div>
                 <div class="detail">Department: {{st.doc.Department}}</div>
                 <div class="detail">University: {{st.doc.University}}</div>
-              
+
             </section>
             <section class="doc-type">
                 <h1>Document Type</h1>
-                <select id="mySelect" ng-model="st.doc.TypeId" >
+                <select id="mySelect" ng-model="st.doc.TypeId">
                     <option value="" disabled selected>Search type</option>
                     <option value="0">Undefined</option>
                     <option value="8">Exam</option>
-                     <option value="7">Study Guide</option>
+                    <option value="7">Study Guide</option>
                     <option value="9">Class Notes</option>
                     <option value="5">Homework</option>
                     <option value="10">Syllabus</option>
@@ -106,7 +105,7 @@
             </section>
         </div>
         <div class="preview col-7">
-            <div class="preview-image" ng-repeat="s in st.documents" ng-show="!st.file">               
+            <div class="preview-image" ng-repeat="s in st.documents" ng-show="!st.file">
                 <img class="imageContent" src="{{s}}" />
             </div>
             <div class="preview-image">
